# CMakeHelpers.Tests

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  readme.md
test.FindPJSIP/: CMakeLists.txt
test.FindPJSIP/test.FindFromSources/: CMakeLists.txt
test.FindPJSIP/test.FindWithPkgConfig/: CMakeLists.txt
test.FindResiprocate/: CMakeLists.txt
test.FindResiprocate/test.FindExactVersion/: CMakeLists.txt
test.FindResiprocate/test.FindMinimalVersion/: CMakeLists.txt
test.GenerateProductVersion/: CMakeLists.txt
